--- a/ProjetoDiscord/App.config
+++ b/ProjetoDiscord/App.config
@@ -10,7 +10,7 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
-        <parameter value="mssqllocaldb" />
+        <parameter value="SQLEXPRESS" />
       </parameters>
     </defaultConnectionFactory>
     <providers>
@@ -18,6 +18,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=ProjetoDiscord.Model1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Conn" 
+		 providerName="System.Data.SqlClient"
+		 connectionString="data Source=COMPUTADOR\SQLEXPRESS;Initial Catalog=ProjetoDiscord;Integrated Security=True;MultipleActiveResultSets=True"  />
   </connectionStrings>
 </configuration>
