--- a/ProjetoDiscord/App.config
+++ b/ProjetoDiscord/App.config
@@ -20,6 +20,6 @@
   <connectionStrings>
     <add name="Conn" 
 		 providerName="System.Data.SqlClient"
-		 connectionString="data Source=COMPUTADOR\SQLEXPRESS;Initial Catalog=ProjetoDiscord;Integrated Security=True;MultipleActiveResultSets=True"  />
+		 connectionString="data Source=COMPUTADOR\SQLEXPRESS;Initial Catalog=ProjectDelta;Integrated Security=True;MultipleActiveResultSets=True"  />
   </connectionStrings>
 </configuration>
